After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 674347 - Fails to recognize Google My Contacts as such
Fails to recognize Google My Contacts as such
Status: RESOLVED FIXED
Product: gnome-contacts
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GNOME Contacts maintainer(s)
GNOME Contacts maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2012-04-18 18:04 UTC by Giovanni Campagna
Modified: 2012-04-30 12:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix retrieving Personal evo group name (1.88 KB, patch)
2012-04-18 18:05 UTC, Giovanni Campagna
none Details | Review

Description Giovanni Campagna 2012-04-18 18:04:51 UTC
I recently blown my e-d-s cache. After that, all contacts were mistakenly marked Other Contacts.
Comparing the results of Evolution and gnome-contacts in gdb I found out that eds_personal_google_group_name() returned the wrong localization for the group.
See patch.
Comment 1 Giovanni Campagna 2012-04-18 18:05:26 UTC
Created attachment 212309 [details] [review]
Fix retrieving Personal evo group name

The code building the domain was always building odd (unstable)
versions, and was not initializing the localedir appropriately.
This resulted in "Personal" instead of the right group name and
therefore did not recognize the system group.
Comment 2 Alexander Larsson 2012-04-30 12:03:52 UTC
good catch, pushed.