Fix retrieving Personal evo group name

The code building the domain was always building odd (unstable)
versions, and was not initializing the localedir appropriately.
This resulted in "Personal" instead of the right group name and
therefore did not recognize the system group.

https://bugzilla.gnome.org/show_bug.cgi?id=674347