src/main.vala
@@ -21,10 +21,11 @@ using Contacts;
 
 public static int
 main (string[] args) {
-  Notify.init (_("Contacts"));
   Intl.bindtextdomain (Config.GETTEXT_PACKAGE, Config.LOCALEDIR);
   Intl.bind_textdomain_codeset (Config.GETTEXT_PACKAGE, "UTF-8");
   Intl.textdomain (Config.GETTEXT_PACKAGE);
+
+  Notify.init (_("Contacts"));
 
 #if HAVE_GSTREAMER
   Gst.init (ref args);
